add room, code changes and utils

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,12 +49,16 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.room:room-common:2.5.2'
+
     // https://developer.android.com/jetpack/compose/bom
     def compose_boom_version = "2022.10.00"
     def core_ktx_version = "1.8.0"
     def activity_version = "1.5.1"
     def lifecycle_version = "2.5.1"
     def hilt_version = "2.44"
+    def room_version = "2.5.2"
+    def coroutines_android_version = "1.5.2"
 
     implementation "androidx.core:core-ktx:$core_ktx_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
@@ -65,8 +69,23 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
+
+    // dagger hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
+
+    // Room
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    // Room Kotlin
+    kapt("androidx.room:room-compiler:$room_version")
+    implementation "androidx.room:room-ktx:$room_version"
+
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_android_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_android_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$coroutines_android_version"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
